refactors to get rid of maven and java api warnings improves tests by adding @After to shutdown server